# arclist

./: MANIFEST  readme.md  setup.cfg  setup.py
arclist/: cmd.py  main.py
