[metadata]
description-file = readme.md

[metadata]
name = arclist
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    License :: OSI Approved :: Apache Software License
description-file =
    README.md

[files]
packages =
    arclist

[entry_points]
console_scripts =
    arclist = arclist.cmd:main